Fix squashed Q42 logo if falling back to png

--- a/styles/1_header.styl
+++ b/styles/1_header.styl
@@ -148,7 +148,6 @@
     border-bottom none
 
   object, img
-    width 100px
     height 140px
     pointer-events none
 
